
          <adapter factory="zope.app.security.LogoutSupported" />

        to your site.zcml or overrides.zcml. The burden is now on the site
        admin to configure a site so that the 'logout' function is supported.
        (The default authentication scheme, HTTP basic auth, does not support
        logout.) See zope/app/security/browser/loginlogout.txt for details.

    Bug Fixes

      - Fixed issue #314: i18n:translate removes line breaks
        from <pre>...</pre> contents

      - The getAdapters function on site managers returned None when
        adapter factories returned None. These values should not be
        included in the output and now aren't.

      - Fixed issue #394: starting zope with command -C arg
        causes request.form to contain '-C':''

      - Fixed issue #387: apidoc and Cookie

      - Fixed issue #334: Failing RuntimeInfo tests

      - Fix: Pagelet directive was inoring the permission. Pagelets which
        not the right permission are not shwon if calling via the Tales
        expression "pagelets:". If calling named pagelets directly via the
        Tales expression "pagelet:" we raise a Unauthorized exception if
        the permission ins't right.

      - Fix: Register the zmi_actions on the right layer if the layer attribute
        is used in the containerViews directive

      - Fix: Make use of the layer attribute in the menuItemDirective

      - Fixed issue #345: Using response.write should not involve unicode
                          conversion

      - Fixed issue #371: OrderedMultiSelectWidget ignores setRenderedValue

      - Fixed issue #360: MultiSelectWidget configured for ISet but creates
                          list

        The correct type of the collection field is now discovered and used.

      - Addressed issue #348: ZCML hides import errors

        I tried really hard to get a better error message, but it is not
        possible, so I just prepended "ImportError:" to the error message.
